* Dialer (ECCP): fix access to possibly-undefined property 'ActualChannel' when
  looping through calls - ActualChannel is set OnLink, but loop also visits 
  unlinked calls in progress. 
* Dialer: subsys lock file must have the same name as the service in 
  /etc/init.d in order to shutdown properly.
* Dialer (ECCP): fix copy/paste error in "getcampaignqueuewait" request on error
  path.

1.6.3 (SVN revision 3327)
* Agent Console: fix broken POST variable parsing when scheduling a call. Fixes
  Elastix bux #1083. 
* Agent Console: allow scrolling on right panel. Fixes Elastix bug #1082.
* Dialer (ECCP): Do not dial to *8888 anymore for agent login. Instead, dial
  channel directly into the AgentLogin application. This frees the dialer from
  having to know a special dialstring for agent login. Fixes Elastix bug #1076.

1.6.2 (SVN revision 3289)
* Dialer: fix bug in which linked call could get assigned to an inactive version
  of an agent even if an active version exists.
* Dialer (ECCP): implement "getcampaignqueuewait" request for sampling of queue
  wait times before calls are handled by an agent.
* Agent Console: wait up to 1 second after login request in order to catch
  early login failure.
* Form Preview: replace HTML entity in Spanish translation
* Queues: complete rewrite, fixes potential SQL injections, makes use of 
  elastix2.lib.php functions, fix title display under elastixneo theme.
* Agent Console: disconnect from databases when performing long polling since
  open database connections are no longer used while waiting.
* Dialer (ECCP): explicitly disconnect from DB connection to asterisk database,
  and report additional information in case of failure. Should fix Elastix bug
  #1053
* Dialer (ECCP): add check for failure to list extensions in loginagent request
* CallCenter Configuration, Campaigns Out, Do not Call List, Agent Console, 
  Clients, Campaign In, Agents, ECCP Users, Break Administrator, Form Designer,